Added basic list functionality, revamped the design.

--- a/src/app/viewer-editor/viewer-editor.component.css
+++ b/src/app/viewer-editor/viewer-editor.component.css
@@ -1,8 +1,19 @@
 :host {
   width: 100%;
+  padding-left: 50px;
+  padding-top: 20px;
+  background-color: #ececec;
 }
 
 .flexbox {
-  background-color: #00e1ff;
   height: 100%;
+}
+
+h2 {
+  padding-bottom: 10px;
+}
+
+mat-divider {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
