--- a/src/app/viewer-editor/viewer-editor.component.html
+++ b/src/app/viewer-editor/viewer-editor.component.html
@@ -1,5 +1,5 @@
 <div class="flexbox">
-  <p>
-    viewer-editor works!
-  </p>
+  <h2>Date: {{getDate()}}</h2>
+  <mat-divider></mat-divider>
+  <div>{{getContent()}}</div>
 </div>
