--- a/src/app/viewer-entrylist/viewer-entrylist.component.css
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.css
@@ -1,11 +1,15 @@
+
 .flexbox {
-  background-color: black;
-  width: 200px;
+  background-color: #cefcfd;
+  width: 250px;
   height: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  color: white;
+h4 {
+  cursor: pointer;
 }
