--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,15 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
