--- a/src/app/viewer-editor/viewer-editor.component.html
+++ b/src/app/viewer-editor/viewer-editor.component.html
@@ -1,5 +1,11 @@
-<div class="flexbox">
+<div class="flexbox" *ngIf='this.dataPuller.getCurrentEntry() != 0; else elseBlock'>
   <h2>Date: {{getDate()}}</h2>
   <mat-divider></mat-divider>
   <div>{{getContent()}}</div>
 </div>
+<ng-template #elseBlock>
+  <div class="flexbox">
+    <p>Welcome!</p>
+    <p>Start making an entry.</p>
+  </div>
+</ng-template>
