--- a/src/app/viewer-entrylist/viewer-entrylist.component.css
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.css
@@ -10,6 +10,19 @@
   flex-direction: column;
 }
 
-h4 {
+.entries {
+  padding-left: 5px;
+  padding-bottom: 8px;
+}
+
+.flex-item {
+  width: 100%;
+  display: flex;  
+  justify-content: space-between;
+}
+
+.date {
   cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
