--- a/src/app/viewer-entrylist/viewer-entrylist.component.html
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.html
@@ -1,9 +1,18 @@
 <div class="flexbox">
+  <mat-menu #appMenu="matMenu">
+    <button mat-menu-item>Settings</button>
+    <button mat-menu-item>Help</button>
+  </mat-menu>
   <mat-list>
-    <h4>Entries:</h4>
+    <h3 class="entries">Entries:</h3>
     <mat-divider></mat-divider>
     <mat-list-item *ngFor='let entry of dataPuller.getEntries()'>
-      <h4 mat-line (click)='alertEditor(entry.id)'>{{entry.date}}</h4>
+      <div class="flex-item">
+        <h3 mat-line (click)='alertEditor(entry.id)' class="date">{{entry.date}}</h3>
+        <button mat-icon-button [matMenuTriggerFor]="appMenu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+      </div>
       <mat-divider></mat-divider>
     </mat-list-item>
   </mat-list>
