--- a/src/app/viewer-editor/viewer-editor.component.css
+++ b/src/app/viewer-editor/viewer-editor.component.css
@@ -3,7 +3,7 @@
   padding-left: 50px;
   padding-top: 20px;
   padding-right: 200px;
-  background-color: #ececec;
+  /* background-color: #ececec; */
 }
 
 .flexbox {
