--- a/src/app/viewer-navbar/viewer-navbar.component.html
+++ b/src/app/viewer-navbar/viewer-navbar.component.html
@@ -1,5 +1,5 @@
-<div class="flexbox">
+<mat-toolbar class="flexbox" color="primary">
   <p (click)='this.dataPuller.setCurrentEntry(0)'>Home</p>
   <p>Placeholder</p>
   <p>IDK</p>
-</div>
+</mat-toolbar>
