--- a/src/app/viewer-entrylist/viewer-entrylist.component.css
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.css
@@ -1,6 +1,6 @@
 
 .flexbox {
-  background-color: #cefcfd;
+  /* background-color: #cefcfd; */
   width: 250px;
   height: 100%;
   padding-right: 10px;
