--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,5 +1,9 @@
 <app-viewer-navbar></app-viewer-navbar>
-<div class="flexbox">
-  <app-viewer-entrylist></app-viewer-entrylist>
-  <app-viewer-editor></app-viewer-editor>
-</div>
+<mat-drawer-container>
+  <mat-drawer mode="side" [opened]="isOpened">
+    <app-viewer-entrylist></app-viewer-entrylist>
+  </mat-drawer>
+  <mat-drawer-content>
+    <app-viewer-editor></app-viewer-editor>
+  </mat-drawer-content>
+</mat-drawer-container>
