--- a/src/app/viewer-editor/viewer-editor.component.html
+++ b/src/app/viewer-editor/viewer-editor.component.html
@@ -1,13 +1,20 @@
-<div class="flexbox" *ngIf='this.dataPuller.getCurrentEntry() != 0; else elseBlock'>
-  <h2 mat-line>Date: {{getDate()}}</h2>
-  <mat-divider></mat-divider>
-  <div mat-line>{{getContent()}}</div>
-</div>
+<mat-card class="flexbox" *ngIf='this.dataPuller.getCurrentEntry() != 0; else elseBlock'>
+  <mat-card-header>
+    <mat-card-title>Test</mat-card-title>
+    <mat-card-subtitle>{{getDate()}}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    {{getContent()}}
+  </mat-card-content>
+  <!-- <mat-card-actions>
+    <button mat-button>Ok</button>
+  </mat-card-actions> -->
+</mat-card>
 <ng-template #elseBlock>
-  <div class="flexbox">
+  <mat-card class="flexbox" #elseBlock>
     <p>Welcome!</p>
     <p>Start making an entry.</p>
     <p>Henlo there</p>
     <button mat-raised-button (click)="openEditor()">Add Entry</button>
-  </div>
+  </mat-card>
 </ng-template>
