--- a/src/app/viewer-navbar/viewer-navbar.component.css
+++ b/src/app/viewer-navbar/viewer-navbar.component.css
@@ -1,9 +1,4 @@
 .flexbox {
   display: flex;
-  flex-flow: row;
-  justify-content: space-around;
-}
-
-p {
-  cursor: pointer;
+  justify-content: space-between;
 }
