--- a/src/app/viewer-navbar/viewer-navbar.component.html
+++ b/src/app/viewer-navbar/viewer-navbar.component.html
@@ -1,5 +1,9 @@
-<mat-toolbar class="flexbox" color="primary">
-  <p (click)='this.dataPuller.setCurrentEntry(0)'>Home</p>
-  <p>Placeholder</p>
-  <p>IDK</p>
+<mat-toolbar class="mat-elevation-z6" color="primary">
+  <mat-toolbar-row class="flexbox">
+    <button mat-icon-button (click)="toggleMenu()">
+      <mat-icon>{{getIcon()}}</mat-icon>
+    </button>
+    <div class="spacer"></div>
+    <button mat-stroked-button>Log out</button>
+  </mat-toolbar-row>
 </mat-toolbar>
