--- a/src/app/viewer/viewer.component.css
+++ b/src/app/viewer/viewer.component.css
@@ -1,15 +1,11 @@
-.flexbox {
-  display: flex;
-  height: 100%;
-  box-shadow: 6px 0 6px rgba(0, 0, 0, 0.65)
-}
-
-.flexbox-toolbar {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-around;
-}
-
 mat-drawer-container {
   height: 100%;
+}
+
+mat-drawer-content {
+  overflow: hidden;
+}
+
+mat-drawer {
+  overflow: hidden;
 }
