--- a/src/app/viewer-entrylist/viewer-entrylist.component.html
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.html
@@ -1,9 +1,16 @@
-<mat-list color="accent" class="flexbox">
+<mat-menu #appMenu="matMenu">
+  <ng-template matMenuContent let-id="id">
+    <button mat-menu-item (click)="rename(id)">Rename</button>
+    <button mat-menu-item (click)="delete(id)">Delete</button>
+    <button mat-menu-item (click)="openDialog()">Test</button>
+  </ng-template>
+</mat-menu>
+<mat-list class="flexbox">
   <h3 class="entries">Entries:</h3>
   <mat-divider></mat-divider>
   <mat-list-item *ngFor='let entry of getEntries()' class="flex-item">
-    <h3 mat-line (click)='alertEditor(entry.id); this.menuButton.close()' class="date">{{entry.date}}</h3>
-    <button mat-icon-button>
+    <h3 mat-line (click)='alertEditor(entry.id); this.sidebar.closeSidebar()' class="date">{{entry.date}}</h3>
+    <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{id: entry.id}">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-divider></mat-divider>
