--- a/src/app/viewer-navbar/viewer-navbar.component.html
+++ b/src/app/viewer-navbar/viewer-navbar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar class="mat-elevation-z6" color="primary">
   <mat-toolbar-row class="flexbox">
-    <button mat-icon-button (click)="toggleMenu()">
+    <button mat-icon-button (click)="this.sidebar.openSidebar()">
       <mat-icon>{{getIcon()}}</mat-icon>
     </button>
     <div class="spacer"></div>
-    <button mat-stroked-button>Log out</button>
+    <button mat-stroked-button (click)="alert('Doesnt work yet')">Log out</button>
   </mat-toolbar-row>
 </mat-toolbar>
