--- a/src/app/viewer-editor/viewer-editor.component.html
+++ b/src/app/viewer-editor/viewer-editor.component.html
@@ -12,8 +12,8 @@
 </mat-card>
 <ng-template #elseBlock>
   <mat-card class="flexbox" #elseBlock>
-    <p>Welcome!</p>
-    <p>Start making an entry.</p>
-    <p>Henlo there</p>
+    <div class="temp">
+      <h1>Henlo!</h1>
+    </div>
   </mat-card>
 </ng-template>
