--- a/src/app/viewer-entrylist-delete-dialog/viewer-entrylist-delete-dialog.component.html
+++ b/src/app/viewer-entrylist-delete-dialog/viewer-entrylist-delete-dialog.component.html
@@ -5,6 +5,6 @@
   <p>Are you sure that you want to delete this entry?</p>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close="canceled">Cancel</button>
-  <button mat-button mat-dialog-close="confirmed" cdkFocusInitial>Confirm</button>
+  <button mat-button mat-dialog-close>No</button>
+  <button mat-button mat-dialog-close="true" cdkFocusInitial>Yes</button>
 </mat-dialog-actions>
