--- a/src/app/viewer-editor/viewer-editor.component.html
+++ b/src/app/viewer-editor/viewer-editor.component.html
@@ -1,19 +1,9 @@
-<mat-card class="flexbox" *ngIf='this.dataPuller.getCurrentEntry() != 0; else elseBlock'>
+<mat-card class="flexbox">
   <mat-card-header>
-    <mat-card-title>Test</mat-card-title>
+    <mat-card-title>{{getTitle()}}</mat-card-title>
     <mat-card-subtitle>{{getDate()}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     {{getContent()}}
   </mat-card-content>
-  <!-- <mat-card-actions>
-    <button mat-button>Ok</button>
-  </mat-card-actions> -->
 </mat-card>
-<ng-template #elseBlock>
-  <mat-card class="flexbox" #elseBlock>
-    <div class="temp">
-      <h1>Henlo!</h1>
-    </div>
-  </mat-card>
-</ng-template>
