--- a/src/app/viewer-entrylist/viewer-entrylist.component.html
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.html
@@ -8,7 +8,7 @@
   <h3 class="entries">Entries:</h3>
   <mat-divider></mat-divider>
   <mat-list-item *ngFor='let entry of getEntries()' class="flex-item">
-    <h3 mat-line (click)='alertEditor(entry.id); this.sidebar.closeSidebar()' class="date">{{entry.date}}</h3>
+    <h3 mat-line (click)='alertEditor(entry.id); this.sidebar.closeSidebar()' class="title">{{entry.title}}</h3>
     <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{id: entry.id}">
       <mat-icon>more_vert</mat-icon>
     </button>
