--- a/src/app/viewer-navbar/viewer-navbar.component.html
+++ b/src/app/viewer-navbar/viewer-navbar.component.html
@@ -4,6 +4,8 @@
       <mat-icon>{{getIcon()}}</mat-icon>
     </button>
     <div class="spacer"></div>
+    <button mat-stroked-button (click)="add()">Add</button>
+    <div class="spacer"></div>
     <button mat-stroked-button (click)="alert('Doesnt work yet')">Log out</button>
   </mat-toolbar-row>
 </mat-toolbar>
