--- a/src/app/viewer-entrylist/viewer-entrylist.component.html
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.html
@@ -5,13 +5,17 @@
   </ng-template>
 </mat-menu>
 <mat-list class="flexbox">
-  <h3 class="entries">Entries:</h3>
-  <mat-divider></mat-divider>
-  <mat-list-item *ngFor='let entry of getEntries()' class="flex-item">
-    <h3 mat-line (click)='alertEditor(entry.id); this.sidebar.closeSidebar()' class="title">{{entry.title}}</h3>
-    <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{id: entry.id}">
-      <mat-icon>more_vert</mat-icon>
-    </button>
+  <mat-list-item>
+    <h3>Entries:</h3>
     <mat-divider></mat-divider>
   </mat-list-item>
+  <div class="entries-list">
+    <mat-list-item *ngFor='let entry of getEntries()' class="flex-item">
+      <h3 mat-line (click)='alertEditor(entry.id); this.sidebar.closeSidebar()' class="title">{{entry.title}} | {{entry.date}}</h3>
+      <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{id: entry.id}">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-divider></mat-divider>
+    </mat-list-item>
+  </div>
 </mat-list>
