--- a/src/app/viewer-editor/viewer-editor.component.html
+++ b/src/app/viewer-editor/viewer-editor.component.html
@@ -1,25 +1,2 @@
-<!-- <mat-card class="flexbox">
-  <mat-card-header>
-    <mat-card-title>{{getTitle()}}</mat-card-title>
-    <mat-card-subtitle>{{getDate()}}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    {{getContent()}}
-  </mat-card-content>
-</mat-card> -->
-<!-- <button mat-button (click)="writeValue('test')">Test</button> -->
-<quill-editor [modules]="{ counter: { container: '#counter', unit: 'word' } }" #editor class="quill">
-  <div quill-editor-toolbar>
-    <span class="ql-formats">
-      <select class="ql-font"></select>
-      <select class="ql-size"></select>
-      <button class="ql-bold"></button>
-      <button class="ql-italic"></button>
-      <button class="ql-underline"></button>
-      <button class="ql-strike"></button>
-    </span>
-    <span class="ql-formats">
-      <div id="counter"></div>
-    </span>
-  </div>
+<quill-editor *ngIf="currentEntry$ | async as currentEntry" [(ngModel)]="currentEntry.content">
 </quill-editor>
