--- a/src/app/viewer-entrylist-rename-dialog/viewer-entrylist-rename-dialog.component.html
+++ b/src/app/viewer-entrylist-rename-dialog/viewer-entrylist-rename-dialog.component.html
@@ -4,10 +4,10 @@
 <mat-dialog-content>
   <p>What would you like to rename it to?</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.title">
+    <input matInput [placeholder]="data.placeholder" [(ngModel)]="data.title">
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button [mat-dialog-close]="undefined">Cancel</button>
   <button mat-button [mat-dialog-close]="data.title" cdkFocusInitial>Confirm</button>
 </mat-dialog-actions>
