--- a/src/app/viewer-navbar/viewer-navbar.component.html
+++ b/src/app/viewer-navbar/viewer-navbar.component.html
@@ -3,6 +3,6 @@
     <button mat-icon-button (click)="this.sidebar.openSidebar()">
       <mat-icon>{{getIcon()}}</mat-icon>
     </button>
-    <button mat-stroked-button (click)="alert('Doesnt work yet')">Log out</button>
+    <button mat-stroked-button (click)="logout()">Log out</button>
   </mat-toolbar-row>
 </mat-toolbar>
