--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,7 +1,7 @@
 <app-viewer-navbar></app-viewer-navbar>
 <mat-drawer-container>
   <mat-drawer mode="side" opened="{{getState()}}" class="drawer">
-    <app-viewer-entrylist></app-viewer-entrylist>
+    <app-viewer-entrylist class="drawer-child"></app-viewer-entrylist>
   </mat-drawer>
   <mat-drawer-content>
     <app-viewer-editor></app-viewer-editor>
