--- a/src/app/viewer-entrylist/viewer-entrylist.component.html
+++ b/src/app/viewer-entrylist/viewer-entrylist.component.html
@@ -3,6 +3,7 @@
     <button mat-menu-item (click)="rename(entry)">Rename</button>
     <button mat-menu-item (click)="delete(entry)">Delete</button>
     <button mat-menu-item (click)="lock(entry)">Lock</button>
+    <button mat-menu-item (click)="export(entry)">Export</button>
   </ng-template>
 </mat-menu>
 <mat-list class="flexbox">
