--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -12,9 +12,16 @@
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding-top: 10px;
 }
 
 .actionButtons {
     width: 100%;
+}
+
+.spacer {
+    width: 2px;
 }
