--- a/src/app/viewer-entrylist-delete-dialog/viewer-entrylist-delete-dialog.component.html
+++ b/src/app/viewer-entrylist-delete-dialog/viewer-entrylist-delete-dialog.component.html
@@ -4,7 +4,7 @@
 <mat-dialog-content>
   <p>Are you sure that you want to delete this entry?</p>
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button mat-dialog-close="true" cdkFocusInitial>Yes</button>
+<mat-dialog-actions class="flex-item">
+  <button mat-button mat-dialog-close class="actionButtons">No</button>
+  <button mat-button mat-dialog-close="true" cdkFocusInitial class="actionButtons">Yes</button>
 </mat-dialog-actions>
