--- a/src/app/viewer-entrylist-protect-dialog/viewer-entrylist-protect-dialog.component.html
+++ b/src/app/viewer-entrylist-protect-dialog/viewer-entrylist-protect-dialog.component.html
@@ -3,10 +3,10 @@
 </h2>
 <mat-dialog-content>
   <mat-form-field>
-    <input matInput type="password" [placeholder]="data.placeholder" [(ngModel)]="data.password">
+    <input matInput type="password" [placeholder]="data.placeholder" [(ngModel)]="data.password" required>
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button [mat-dialog-close]="undefined">Cancel</button>
-  <button mat-button [mat-dialog-close]="data.password" cdkFocusInitial>Confirm</button>
+  <button mat-button [mat-dialog-close]="data.password" cdkFocusInitial disabled="{{checkDisabled(data.password)}}">Confirm</button>
 </mat-dialog-actions>
