--- a/src/app/login-newuser/login-newuser.component.html
+++ b/src/app/login-newuser/login-newuser.component.html
@@ -12,5 +12,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button [mat-dialog-close]="undefined" tabindex="-1">Cancel</button>
-  <button mat-button [mat-dialog-close]="{title: data.username, date: data.password}" cdkFocusInitial disabled="{{checkDisabled(data.username, data.password)}}">Confirm</button>
+  <button mat-button [mat-dialog-close]="{username: data.username, password: data.password}" cdkFocusInitial disabled="{{checkDisabled(data.username, data.password)}}">Confirm</button>
 </mat-dialog-actions>
