--- a/src/app/viewer-entrylist-add-dialog/viewer-entrylist-add-dialog.component.html
+++ b/src/app/viewer-entrylist-add-dialog/viewer-entrylist-add-dialog.component.html
@@ -4,7 +4,7 @@
 <mat-dialog-content>
   <p>Title:</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.title">
+    <input matInput [(ngModel)]="data.title" cdkFocusInitial>
   </mat-form-field>
   <p>Date:</p>
   <mat-form-field>
@@ -12,6 +12,6 @@
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="undefined">Cancel</button>
-  <button mat-button [mat-dialog-close]="{title: data.title, date: data.date}" cdkFocusInitial disabled="{{checkDisabled(data.title, data.date)}}">Confirm</button>
+  <button mat-button [mat-dialog-close]="undefined" tabindex="-1">Cancel</button>
+  <button mat-button [mat-dialog-close]="{title: data.title, date: data.date}" disabled="{{checkDisabled(data.title, data.date)}}">Confirm</button>
 </mat-dialog-actions>
