--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,6 +16,7 @@
     <mat-card-actions class="flex-item">
       <button mat-raised-button class="actionButtons" tabindex="-1" (click)="newUser()">New user</button>
       <button mat-raised-button class="actionButtons" (click)="login(username, password)">Login</button>
+      <button mat-raised-button class="actionButtons" (click)="test(username)">Test</button>
     </mat-card-actions>
   </mat-card>
 </div>
