--- a/src/app/viewer/editor/viewer-editor.component.html
+++ b/src/app/viewer/editor/viewer-editor.component.html
@@ -1,3 +1,3 @@
 <quill-editor *ngIf="currentEntry$ | async as currentEntry" [(ngModel)]="currentEntry.content" [modules]="{ toolbar: [{'font': []}, {'size': []},'bold', 'italic', 'underline', 'strike'] }"
-    class="quill">
+    class="quill" (keyup)="save()">
 </quill-editor>
